--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,6 +10,9 @@
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button" onclick="firstCall();">{{ 'index.search' | trans }}</button>
                 </span>
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" onclick="cleanScreen();">{{ 'index.clean' | trans }}</button>
+                </span>
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
     </div>
